fix wire alignment

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body {
 }
 
 .wire.right {
-  right: 3%;
+  right: 23%;
 }
 
 .sign-board {
